[gd_scene load_steps=59 format=3 uid="uid://xynscfrkku6y"]

[ext_resource type="Texture2D" uid="uid://crd8p75f5qd6c" path="res://assets/Monster_Creatures_Fantasy/Fire Worm/Sprites/Worm/Attack.png" id="1_3ip6f"]
[ext_resource type="Script" path="res://worm/worm.gd" id="1_g70db"]
[ext_resource type="Texture2D" uid="uid://bwwlky8mbxdkv" path="res://assets/Monster_Creatures_Fantasy/Fire Worm/Sprites/Worm/Idle.png" id="2_fonsj"]
[ext_resource type="Texture2D" uid="uid://cfmt6mamv658f" path="res://assets/Monster_Creatures_Fantasy/Fire Worm/Sprites/Worm/Death.png" id="3_7cwyx"]
[ext_resource type="Texture2D" uid="uid://ccqolbqaew3ka" path="res://assets/Monster_Creatures_Fantasy/Fire Worm/Sprites/Worm/Walk.png" id="4_dlt80"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etcrc"]
size = Vector2(50, 25)

[sub_resource type="Animation" id="Animation_p2adj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("movible/worm_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_animation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("movible/worm_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:animation_finished")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dxqmb"]
resource_name = "attack_animation"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("movible/worm_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_animation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("movible/worm_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 15]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_fire_ball"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:animation_finished")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wh5nm"]
resource_name = "ball_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("movible/worm_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_animation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("movible/worm_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}

[sub_resource type="Animation" id="Animation_b0bfv"]
resource_name = "death_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("movible/worm_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death_animation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("movible/worm_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}

[sub_resource type="Animation" id="Animation_0qain"]
resource_name = "idle_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("movible/worm_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_animation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("movible/worm_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}

[sub_resource type="Animation" id="Animation_cwb0s"]
resource_name = "walk_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("movible/worm_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_animation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("movible/worm_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 8, 0, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2cl1e"]
_data = {
"RESET": SubResource("Animation_p2adj"),
"attack_animation": SubResource("Animation_dxqmb"),
"ball_animation": SubResource("Animation_wh5nm"),
"death_animation": SubResource("Animation_b0bfv"),
"idle_animation": SubResource("Animation_0qain"),
"walk_animation": SubResource("Animation_cwb0s")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_p4pty"]
atlas = ExtResource("1_3ip6f")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_51vbk"]
atlas = ExtResource("1_3ip6f")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1eg1"]
atlas = ExtResource("1_3ip6f")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqjgn"]
atlas = ExtResource("1_3ip6f")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0rlh"]
atlas = ExtResource("1_3ip6f")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrfi3"]
atlas = ExtResource("1_3ip6f")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_pidjg"]
atlas = ExtResource("1_3ip6f")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_w65tv"]
atlas = ExtResource("1_3ip6f")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_onecf"]
atlas = ExtResource("1_3ip6f")
region = Rect2(720, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_870ho"]
atlas = ExtResource("1_3ip6f")
region = Rect2(810, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4uwv"]
atlas = ExtResource("1_3ip6f")
region = Rect2(900, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wwrv"]
atlas = ExtResource("1_3ip6f")
region = Rect2(990, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_83lro"]
atlas = ExtResource("1_3ip6f")
region = Rect2(1080, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_bek2a"]
atlas = ExtResource("1_3ip6f")
region = Rect2(1170, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy1v2"]
atlas = ExtResource("1_3ip6f")
region = Rect2(1260, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw15y"]
atlas = ExtResource("1_3ip6f")
region = Rect2(1350, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vowug"]
atlas = ExtResource("3_7cwyx")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3nsw"]
atlas = ExtResource("3_7cwyx")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hgal"]
atlas = ExtResource("3_7cwyx")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa6do"]
atlas = ExtResource("3_7cwyx")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_643g7"]
atlas = ExtResource("3_7cwyx")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy5ct"]
atlas = ExtResource("3_7cwyx")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_utf62"]
atlas = ExtResource("3_7cwyx")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2hkn"]
atlas = ExtResource("3_7cwyx")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e4cw"]
atlas = ExtResource("2_fonsj")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmgmr"]
atlas = ExtResource("2_fonsj")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kotmu"]
atlas = ExtResource("2_fonsj")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk2ei"]
atlas = ExtResource("2_fonsj")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_iys70"]
atlas = ExtResource("2_fonsj")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl7hr"]
atlas = ExtResource("2_fonsj")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx86v"]
atlas = ExtResource("2_fonsj")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r6jy"]
atlas = ExtResource("2_fonsj")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkksu"]
atlas = ExtResource("2_fonsj")
region = Rect2(720, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5k6e"]
atlas = ExtResource("4_dlt80")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll6fu"]
atlas = ExtResource("4_dlt80")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1qe6"]
atlas = ExtResource("4_dlt80")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_omv2r"]
atlas = ExtResource("4_dlt80")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4fru"]
atlas = ExtResource("4_dlt80")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_oundf"]
atlas = ExtResource("4_dlt80")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxq53"]
atlas = ExtResource("4_dlt80")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_1clbu"]
atlas = ExtResource("4_dlt80")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc7ns"]
atlas = ExtResource("4_dlt80")
region = Rect2(720, 0, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_is8hp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4pty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51vbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1eg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqjgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0rlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrfi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pidjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w65tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onecf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_870ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4uwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wwrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83lro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bek2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy1v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw15y")
}],
"loop": false,
"name": &"attack_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vowug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3nsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hgal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa6do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_643g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy5ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utf62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2hkn")
}],
"loop": true,
"name": &"death_animation",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e4cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmgmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kotmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk2ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iys70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl7hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx86v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r6jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkksu")
}],
"loop": false,
"name": &"idle_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5k6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll6fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1qe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omv2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4fru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oundf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxq53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1clbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc7ns")
}],
"loop": true,
"name": &"walk_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p86f4"]
radius = 6.08276

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmaxx"]
size = Vector2(411, 123)

[node name="worm" type="CharacterBody2D"]
script = ExtResource("1_g70db")
animation_finished = true

[node name="worm_collision" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_etcrc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2cl1e")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="movible" type="Marker2D" parent="."]

[node name="worm_sprite" type="AnimatedSprite2D" parent="movible"]
sprite_frames = SubResource("SpriteFrames_is8hp")
animation = &"idle_animation"
frame = 5

[node name="hurt" type="Area2D" parent="movible"]
collision_layer = 4
collision_mask = 2

[node name="hurt_box_worm" type="CollisionShape2D" parent="movible/hurt"]
position = Vector2(13, -11)
shape = SubResource("CircleShape2D_p86f4")
debug_color = Color(0.677975, 0.301312, 1, 0.42)

[node name="ball_position" type="Marker2D" parent="movible"]
position = Vector2(36, -6)

[node name="detection_area" type="Area2D" parent="."]

[node name="detection_collision" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0.5, -21.5)
shape = SubResource("RectangleShape2D_vmaxx")
debug_color = Color(0.611146, 0.538372, 0.0171186, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_entered" from="movible/hurt" to="." method="_on_hurt_area_shape_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_area_2d_body_exited"]
